# officina

./: .env.bak.rebrand.20260709152156  .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  SECURITY_AUDIT_2026_05.md  composer.json  deploy-atheneum.sh  package-lock.json  package.json  phpunit.xml  rollback-atheneum.sh  tailwind.config.js
.github/workflows/: ci.yml  tests.yml
app/Jobs/: ExtractTeachingDocumentJob.php  GenerateVideoJob.php  ParseCourseDocumentsJob.php  RunGapScoutJob.php  StudentGenerateArtifactJob.php
app/Livewire/: FaqAccordion.php
app/Mail/: CertificationPassedMail.php  ContactFormMessage.php  (+2 more)
bootstrap/: app.php
config/: admin.php  atheneum.php  services.php
noscite-atheneum/: .env.example  CLAUDE.md  composer.json  deploy-atheneum.sh  package-lock.json
noscite-pkm-agent/: .env.example  .gitignore  LICENSE  Makefile  README.md  analyzer.py  api_utils.py  cleanup_links.py  config.py  dashboard_server.py  dedup_links.py  deploy_pkm.sh  extractor.py  graph_client.py  html_dashboard.py  index_builder.py  linker.py  log.sh  md_generator.py  metadata_agent.py  processor.py  pyproject.toml  reformat_translations.py  report_generator.py  reprocess_all.py  requirements.txt  state_store.py  switch_env.sh  translator.py  watcher.py
noscite-pkm-agent/tests/: test_sanitize_stem.py
noscite-site/: composer.json  package-lock.json  package.json
noscite-videoai/: .env.example  .gitignore  README.md  deploy-videoai.sh  requirements.txt  test_ingest.py
public/: robots.txt  sitemap.xml
routes/: console.php  web.php
scripts/: smoke-test.sh
(+647 files in other folders)
